<resources>
    <string name="app_name">2FA</string>

    <string name="no_saved_otp">No Saved OTP</string>
    <string name="accounts">Accounts</string>
    <string name="one_time_password">One Time password</string>
    <string name="copy_password">Copy password</string>
    <string name="password_copied_to_clipboard">Password copied to clipboard</string>
    <string name="delete_button">Delete Button</string>
    <string name="add_button">Add button</string>
    <string name="add_account">Add Account</string>
    <string name="account_name">Account Name</string>
    <string name="secret_key">Secret Key</string>
    <string name="required">Required</string>
    <string name="arrow_right">Arrow Right</string>
</resources>